--- a/index.html
+++ b/index.html
@@ -8,17 +8,46 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            padding: 0;
+            box-sizing: border-box;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
         }
         label {
             display: block;
             margin-bottom: 5px;
             font-weight: bold;
         }
-        input {
+        .input-clear-container {
+            display: flex;
+            gap: 10px;
             margin-bottom: 10px;
-            padding: 8px;
-            width: 100%;
-            max-width: 400px;
+        }
+        input {
+            padding: 15px;
+            flex: 1;
+            font-size: 16px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .clear-button {
+            width: 50px;
+            height: 50px;
+            background-color: #ff4d4d;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            padding: 0;
+        }
+        .clear-button:hover {
+            background-color: #ff1a1a;
         }
         button {
             padding: 10px 15px;
@@ -27,41 +56,52 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            width: 100%;
+            box-sizing: border-box;
         }
         button:disabled {
             background-color: #ccc;
             cursor: not-allowed;
+        }
+        a {
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
     <h1>JWT Deeplink Generator</h1>
     <label for="jwtInput">Enter JWT Token:</label>
-    <input type="text" id="jwtInput" placeholder="Paste your JWT here" />
-    <br />
-    <button id="generateButton" disabled>Generate Deeplink</button>
-    <br /><br />
-    <a id="deeplinkButton" href="#" style="display: none;">
-        <button>Open Deeplink</button>
+    <div class="input-clear-container">
+        <input type="text" id="jwtInput" placeholder="Paste your JWT here" />
+        <button class="clear-button" id="clearButton">&times;</button>
+    </div>
+    <a id="deeplinkButton" href="#">
+        <button id="openButton" disabled>Open Deeplink</button>
     </a>
 
     <script>
         const jwtInput = document.getElementById('jwtInput');
-        const generateButton = document.getElementById('generateButton');
+        const openButton = document.getElementById('openButton');
+        const clearButton = document.getElementById('clearButton');
         const deeplinkButton = document.getElementById('deeplinkButton');
 
-        // Enable button only when input is not empty
+        // Update button state and deeplink on input
         jwtInput.addEventListener('input', () => {
-            generateButton.disabled = !jwtInput.value.trim();
-        });
-
-        generateButton.addEventListener('click', () => {
             const token = jwtInput.value.trim();
             if (token) {
                 const deeplink = `envoid://?token=${encodeURIComponent(token)}`;
                 deeplinkButton.href = deeplink;
-                deeplinkButton.style.display = 'inline-block';
+                openButton.disabled = false;
+            } else {
+                openButton.disabled = true;
             }
+        });
+
+        // Clear the input field and reset button state
+        clearButton.addEventListener('click', () => {
+            jwtInput.value = '';
+            openButton.disabled = true;
+            deeplinkButton.href = '#';
         });
 
         // Check for token in URL params
@@ -69,10 +109,9 @@
         const tokenParam = urlParams.get('token');
         if (tokenParam) {
             jwtInput.value = tokenParam;
-            generateButton.disabled = false;
             const deeplink = `envoid://?token=${encodeURIComponent(tokenParam)}`;
             deeplinkButton.href = deeplink;
-            deeplinkButton.style.display = 'inline-block';
+            openButton.disabled = false;
         }
     </script>
 </body>
