--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JWT Deeplink Generator</title>
+    <title>JWT Deeplink</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,6 +13,7 @@
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
+            width: 80%;
         }
         label {
             display: block;
@@ -69,7 +70,7 @@
     </style>
 </head>
 <body>
-    <h1>JWT Deeplink Generator</h1>
+    <h1>JWT Deeplink</h1>
     <label for="jwtInput">Enter JWT Token:</label>
     <div class="input-clear-container">
         <input type="text" id="jwtInput" placeholder="Paste your JWT here" />
